# WeatherForecast

./: .gitignore  CMakeLists.txt  LICENSE  README.md  in.json
lib/: CMakeLists.txt  controller.cpp  model.cpp  view.cpp  weather.cpp  weather.h
